Fix Vercel build with static-build config

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "start": "webpack serve --mode development",
         "start-prod": "webpack serve --mode production",
         "build": "webpack --mode production",
+        "vercel-build": "npm install -g pnpm && pnpm install && pnpm run build",
         "test": "jest",
         "lint": "eslint src",
         "scan-translations": "pnpx jest ./tests/i18nScan.test.js"
